app/styles/app.scss
/* dependencies */

@import "ember-searchable-select/style";
@import "ember-power-select";
@mixin font-face($name) {
    @font-face {
        font-family: $name;
        src: url("../fonts/#{$name}.eot?") format("eot"),
        url("../fonts/#{$name}.woff") format("woff");
    }
}

@include font-face('Dosis-ExtraLight');
@include font-face('Dosis-Light');
@include font-face('Dosis-ExtraBold');
@include font-face('Dosis-Bold');
@include font-face('Dosis-Medium');
@include font-face('Dosis-Regular');
@include font-face('Dosis-SemiBold');
div,
h1,
h2,
h3,
h4,
h5,
h6,
span,
em,
li,
ul {
    font-family: 'Dosis-Regular' !important;
}

// colors
$primary-color: #0A4650;
$gray: #E1E1E1;
$red: #B40028;
$secondary-color: #00AFAA;
html,
body {
    height: 100%;
    margin: 0;
    padding: 0;
}

.ember-application > .ember-view {
    height: 100%;
    width: 100%;
}

.main-map {
    height: 100%;
    width: 100%;
    .leaflet-container {
        height: 100%;
    }
}

.statewide-view {
    height: 500px;
}

.choropleth-menu {
    position: absolute;
    right: 0;
    z-index: 9999;
}

.basemap-menu {
    position: absolute;
    right: 15px;
    bottom: 15px;
    z-index: 9999;
}

.sidebar-tab {
    position: absolute;
    left: 0px;
    z-index: 500;
    top: 49%;
}

.resource-nav-menu {
    position: absolute;
    top: 0px;
    right: 15px;
}

.hidden {
    display: none;
    visibility: inherit;
}

.hidden-custom {
    display: none;
    visibility: inherit;
}


/* nav */

nav {
    position: absolute;
    z-index: 9999;
    width: 100%;
    // display: flex;
    // flex-direction: row;
    // background: pink;
    // height: 40px;
    // justify-content: space-around;
    // align-items: center;
}

main {
    height: 100%;
    padding-top: 63px !important;
    padding-bottom: 0px !important;
}

.hide-sidebar {
    display: none;
}

.cities {
    height: 100%;
    position: relative;
}

.regionX {
    visibility: hidden;
}

.list-results {
  height: 100%;
  overflow: scroll;
  position: absolute;
  padding: 0 !important;
  margin: 0 !important;
}

.map-results {
    .ui.grid > .column:not(.row),
    .ui.grid > .row > .column {
        padding: 0;
    }
    .ui.grid > .column:not(.row) {
        padding: 0;
    }
}

.cities-map {
    height: 100%;
    width: 100%;
    margin: 0;
    position: relative;
    padding: -1rem;
}

.has-pointer {
    cursor: pointer;
}


/* details */

.Searchable-select {
    min-width: 350px;
}

.detail-full-screen {
    background-color: white;
}

.map-popup {
    position: absolute;
    z-index: 9999;
    max-width: 180px;
}

.c3-event-rect {
    cursor: pointer;
}

// .liquid-child { position: relative !important;}
.detail-full-height {
    z-index: 9999;
    height: 100%;
    top: 63px;
    position: fixed;
    width: 100%;
    z-index: 5;
}

.ui-visibility-sticky {
    // width: 100%;
    background-color: white;
}

.ui.label.legend {
    background-color: inherit;
}

// Semantic UI overrides
.ui.inverted.main.menu {
    background: $primary-color;
}

.ui.header {
    font-family: 'Dosis-Regular';
}

.ui.menu.main.inverted {
    border-radius: 0;
}

.ui.header.splash {
    color: $primary-color;
}

.ui.header.splash.semi-bold {
    font-family: 'Dosis-ExtraBold';
}

.ui.card > .content.splash-inverted {
    background: $primary-color;
    color: rgba(255, 255, 255, 0.9);
    font-family: 'Dosis-SemiBold';
}

.ui.label.filters-label {
    color: $primary-color;
    border: 2px solid $primary-color;
    background-color: white;
}

.ui.label.even-spaced {
    min-width: 100px;
    text-align: center;
    flex-grow: 1;
}

.ui.label.filters-label:hover {
    border: 2px solid $primary-color;
    background-color: $primary-color;
    color: white;
}

.ui.label.tdi-blue {
    background: $secondary-color;
    border: 2px solid $primary-color;
}

.ui.label.tdi-blue:hover {
    background-color: $primary-color;
    border: 2px solid $primary-color;
}

.ui.tdi-blue.divider:not(.vertical):not(.horizontal) {
    border-top: 2px solid $primary-color;
}

.tdi-semi-bold.title {
    font-family: 'Dosis-SemiBold' !important;
}

.ui.accordion .title.tdi-semi-bold:not(.ui) {
    font-size: 1.429em;
}

.Searchable-select__option,
.Searchable-select__input {
    color: black;
}

.ember-power-select-trigger-multiple-input {
    width: 100% !important;
}

.ui.basic.segment.fixed-footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 35px;
    background-color: white;
    border-top-color: $primary-color;
    border-top-width: 3px;
    border-top-style: solid;
    z-index: 9999;
    padding-top: 0;
    padding-bottom: 0;
    .item {
        color: $primary-color;
    }
    .ui.borderless.menu {
        border-radius: 0;
        border-width: 0;
    }
}

.c3-grid line {
    stroke: black;
    stroke-width: 2px;
}

.c3-xgrid-line text {
    fill: black;
}

.noUi-ltr {
    z-index: 1000;
    color: black;
}

.noUi-tooltip {
    width: 100px;
}

.filter-label-group {
    display: flex;
}

.flex-direction-column {
    flex-direction: column;
}

.ui.menu {
  .text {
    font-size: 1.3em;
  }
}

.header.item {
  strong {
    font-size: 1.1em;
  }
}

.dynamic-cluster {
  width: 39px;
  height: 39px;
  background-image: url('/images/icons/investments/cluster.png');
  padding-top: 6px;
  text-align: center;
  color: white;
}

.over-time-chart {
    position: fixed;
    width:100%;
    z-index:9999;
    bottom:40px;
}

.edit-mode {
  background-color: #A0C8BE;
}

.city-details .liquid-container {
  padding: 2em !important; 
}

.city-details .container {
  padding: 2em !important; 
  margin: 2em;
}

